# PreviewVideo_Jetson_NX

./: Acquisition.cpp  CMakeLists.txt  README.md
cmake/: FindSpinnaker.cmake
